[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "prim"
requires-python = ">= 3.7"
authors = [{name = "Yulia Gutierrez", email = "yulia.gutierrez@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]

[project.urls]
Home = "https://github.com/yuliamg/HW3-PRIM-MST.git"